Bug 408913. Do a proper fix for pixel-aligned drawing of IFRAME contents. The secret is make ViewToWidgetOffset return correct results for the root views of subdocuments. r+sr=bzbarsky