view/src/nsViewManager.cpp
@@ -597,24 +597,8 @@ void nsViewManager::RenderViews(nsView *aView, nsIRenderingContext& aRC,
     nsRegion damageRegion(aRegion);
     damageRegion.MoveBy(offsetToRoot);
 
-    gfxContext* ctx = aRC.ThebesContext();
-    nsCOMPtr<nsIDeviceContext> dc;
-    aRC.GetDeviceContext(*getter_AddRefs(dc));
-    double appPerDev = dc->AppUnitsPerDevPixel();
-    gfxRect r(-offsetToRoot.x/appPerDev, -offsetToRoot.y/appPerDev, 1.0, 1.0);
-
     aRC.PushState();
-    // Translate by the pixel-snapped offsetToRoot so that aRC's (0,0) will
-    // be aligned to pixel boundaries. We use gfx pixel-snapping here to
-    // ensure that the snapping we do here is consistent with other gfx
-    // snapping. For example if someone drew a border around the outside
-    // of aView, we want our (0,0) to be the inside top-left of that
-    // border.
-    if (ctx->UserToDevicePixelSnapped(r)) {
-      ctx->Translate(ctx->DeviceToUser(r).pos);
-    } else {
-      aRC.Translate(-offsetToRoot.x, -offsetToRoot.y);
-    }
+    aRC.Translate(-offsetToRoot.x, -offsetToRoot.y);
     mObserver->Paint(displayRoot, &aRC, damageRegion);
     aRC.PopState();
   }
